more comments and to Drupal theme

--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,3 +1,7 @@
+// /////////////////////////////
+// @@ COLORS VARIABLES
+// /////////////////////////////
+
 $colors: (
   red: rgb(255, 0, 0),
   blue: rgb(0, 0, 173),
