--- a/src/sass/abstracts/_index.scss
+++ b/src/sass/abstracts/_index.scss
@@ -1,3 +1,7 @@
+// /////////////////////////
+// @@ ABSTRACTS INDEX
+// ////////////////////////
+
 @forward "vars";
 @forward "colors";
-@forward "fonts";
+@forward "mixins";
