--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -4,6 +4,8 @@
 
 $margin-b: 3rem;
 
+$default-padding: 2rem;
+
 // FONTS VARIABLES
 $ff-sans: 'Roboto', sans-serif;
 $ff-titles: 'Roboto', sans-serif;
